# nightingale-client

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: jekyll.yml  static.yml
examples/e_serenity/: Cargo.toml
examples/e_serenity/src/: commands.rs  main.rs
examples/e_serenity_poise/: Cargo.toml
examples/e_serenity_poise/src/: commands.rs  main.rs
examples/e_twilight/: Cargo.toml
examples/e_twilight/src/: commands.rs  main.rs
examples/e_twilight_interactions/: Cargo.toml
examples/e_twilight_interactions/src/: commands.rs  main.rs
examples/e_twilight_vesper/: Cargo.toml
examples/e_twilight_vesper/src/: commands.rs  main.rs
nightingale_client/: all.html  index.html  sidebar-items.js  struct.NightingaleClient.html
nightingale_client/config/: index.html  sidebar-items.js  struct.Config.html  struct.SessionConfig.html
nightingale_client/error/: enum.HttpError.html  index.html  sidebar-items.js  struct.StatusCodeError.html
nightingale_client/events/: index.html  trait.EventHandler.html
nightingale_client/model/: index.html  sidebar-items.js
nightingale_client/model/error/: index.html  struct.ErrorResponse.html
nightingale_client/model/gateway/: index.html  sidebar-items.js
nightingale_client/model/gateway/event/: enum.Event.html  index.html  sidebar-items.js  struct.TrackEnd.html  struct.TrackErrored.html
nightingale_client/model/gateway/forward/: index.html  struct.Forward.html
nightingale_client/model/gateway/ready/: index.html  sidebar-items.js  struct.Ready.html
nightingale_client/model/gateway/state/: enum.UpdateState.html  index.html  sidebar-items.js  struct.ConnectionData.html  struct.DisconnectData.html
nightingale_client/model/info/: index.html  sidebar-items.js  struct.CoreInfo.html  struct.CpuInfo.html  struct.Info.html  struct.MemoryInfo.html  struct.PlaybackInfo.html  struct.SystemInfo.html
nightingale_client/model/player/: index.html  sidebar-items.js  struct.PlayerInfo.html
nightingale_client/model/search/: index.html  sidebar-items.js
nightingale_client/model/search/youtube/: index.html  sidebar-items.js  struct.YoutubePlaylist.html  struct.YoutubeTrack.html
nightingale_client/model/track/: index.html  struct.Track.html
nightingale_client/player/: index.html  struct.Player.html
nightingale_client/reference/: index.html  sidebar-items.js  struct.Reference.html  struct.ReferenceMut.html
nightingale_client/rest/: index.html  sidebar-items.js  struct.RestClient.html
nightingale_client/serenity_ext/: index.html  sidebar-items.js  struct.NightingaleKey.html  trait.SerenityExt.html
nightingale_client/source/: index.html  sidebar-items.js  struct.Bytes.html  struct.Link.html  struct.Youtube.html  trait.PlaySource.html  trait.SearchRoute.html  trait.SearchSource.html
src/: config.rs  error.rs  events.rs  lib.rs  manager.rs  msg.rs  player.rs  reference.rs  rest.rs  serenity_ext.rs  shard.rs  socket.rs  source.rs  stream.rs
src/model/: connection.rs  error.rs  info.rs  mod.rs  player.rs  track.rs
src/model/gateway/: event.rs  forward.rs  mod.rs  ready.rs  state.rs
src/model/search/: youtube.rs
src/nightingale_client/: config.rs.html  error.rs.html  events.rs.html  lib.rs.html  manager.rs.html  msg.rs.html  player.rs.html  reference.rs.html  rest.rs.html  serenity_ext.rs.html  socket.rs.html  source.rs.html
src/nightingale_client/model/: error.rs.html  info.rs.html  mod.rs.html  player.rs.html  track.rs.html
src/nightingale_client/model/gateway/: event.rs.html  forward.rs.html  mod.rs.html  ready.rs.html  state.rs.html
src/nightingale_client/model/search/: mod.rs.html  youtube.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/nightingale_client/serenity_ext/: trait.SerenityExt.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/typemap_rev/: trait.TypeMapKey.js
