[package]
name = "nightingale-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["sync"] }
tokio-tungstenite = "0.21.0"
twilight-model = { version = "0.15.4", optional = true }
serenity = { default-features = false, optional = true }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tracing = "0.1.40"
