[package]
name = "nightingale-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["sync", "macros"] }
tokio-tungstenite = "0.20.1"
twilight-model = { version = "0.15.4", optional = true }
serenity = { version = "0.12", default-features = false, optional = true, features = ["gateway", "voice"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tracing = "0.1.40"
typemap_rev = "0.3.0"
dashmap = "5.5.3"
parking_lot = "0.12.1"

[features]
twilight = ["dep:twilight-model"]

build-serenity = ["serenity", "serenity/rustls_backend"]
default = ["build-serenity"]
