[package]
name = "e_serenity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.3"
serenity = { version = "0.12.0", features = ["cache", "framework", "standard_framework", "rustls_backend"]}
nightingale-client = { git = "https://github.com/AlvaroMS25/nightingale-client.git", features = ["serenity"]}
regex = "1.10.3"
lazy_static = "1.4.0"
