[package]
name = "e_serenity_poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightingale-client = { git = "https://github.com/AlvaroMS25/nightingale-client.git", features = ["serenity"]}
tokio = { version = "1", features = ["full"] }
poise = "0.6.1"
regex = "1.10.3"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
