[package]
name = "e_twilight_interactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-cache-inmemory = "0.15.4"
twilight-interactions = "0.15.2"
regex = "1.10.3"
lazy_static = "1.4.0"

[dependencies.nightingale-client]
git = "https://github.com/AlvaroMS25/nightingale-client.git"
features = ["twilight"]
